--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,13 +38,15 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.javaFX.classpath}
+    ${libs.javaFX.classpath}:\
+    ${libs.Jbcrypt-0.4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=\
-    ${libs.javaFX.classpath}
+    ${libs.javaFX.classpath}:\
+    ${libs.Jbcrypt-0.4.classpath}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
